Update boilerplate config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-avancado-boilerplate",
+  "name": "roberta-peixoto-boilerplate",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
+    "lint:fix": "yarn lint --fix",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
     "test:ci": "jest --runInBand",
@@ -24,7 +26,7 @@
   },
   "dependencies": {
     "next": "11.1.2",
-    "next-pwa": "^5.3.1",
+    "next-pwa": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "5.3.1"
@@ -32,21 +34,22 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@storybook/addon-essentials": "6.3.10",
-    "@storybook/react": "6.3.10",
+    "@storybook/addon-essentials": "6.3.12",
+    "@storybook/react": "6.3.12",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "rc-v5",
-    "@typescript-eslint/parser": "rc-v5",
+    "@typescript-eslint/eslint-plugin": "5.1.0",
+    "@typescript-eslint/parser": "5.1.0",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "^8.0.0",
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint": "^8.0.1",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-only-warn": "1.0.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -54,9 +57,12 @@
     "jest": "^27.2.5",
     "jest-styled-components": "^7.0.5",
     "lint-staged": "^11.2.3",
-    "plop": "^2.7.4",
+    "plop": "^2.7.6",
     "prettier": "^2.4.1",
     "storybook-addon-next-router": "^3.0.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
+  },
+  "eslintConfig": {
+    "extends": "./.eslintrc.json"
   }
 }
