--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,12 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
+indent = 2
+indent_styles = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
+insert_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
